# assemblers-solver

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md
data/: catalog.txt  processers.yaml  sources.yaml  stack-size.yaml
data/dumps/: assembling-machine.json  equipment.json  fluid.json  item.json  lab.json  recipe.json  technology.json  tile.json
data/recipe/: exception.yaml  furnaces.yaml  materials.yaml  science-packs.yaml
data/recipes/: centrifuge.yaml  chemical.yaml  combat.yaml  electricity.yaml  furnaces.yaml  liquid.yaml  machines.yaml  materials.yaml  module.yaml  ores.yaml  processers.yaml  rail.yaml  rocket.yaml  science-packs.yaml  tiles.yaml  transports.yaml
src/: cfg_file.rs  config.rs  consts.rs  formatter.rs  main.rs  near_name.rs  processer.rs  recipe.rs  solution.rs  solver.rs  sources.rs  stack.rs  sub.rs  target.rs  technology.rs  util.rs
src/formatter/: graph.rs  text.rs
src/processer/: loader.rs
src/processer/loader/: test.rs
src/recipe/: load.rs  mod.rs  tests.rs
src/solver/: mod.rs  processer.rs
src/sub/: check.rs  mining.rs  oil.rs  recipe_check.rs  search.rs  solve.rs  stack.rs  tech_tree.rs
