[package]
name = "assemblers-solver"
version = "0.4.0"
description = "Factorio assemblers solver"
authors = ["Igaguri <igagurimk@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.32.0"
edit-distance = "2.1.0"
failure = "0.1.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.7"
toml = "0.5.5"
