[package]
name = "assemblers-solver"
version = "0.4.0"
description = "Factorio assemblers solver"
authors = ["Igaguri <igagurimk@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
clap = "2.32.0"
edit-distance = "2.1.0"
either = "1.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.7"
toml = "0.5.5"
